syntax = "proto3";

import "zeloscloud/trace/trace.proto";

package zeloscloud.trace;

option go_package = "github.com/zeloscloud/zelos/proto/zeloscloud/trace";


service TracePublish {
    rpc Publish(stream PublishRequest) returns (stream PublishResponse);
}

message PublishRequest {
    repeated TraceMessage trace_messages = 1;
}

message PublishStatus {
    uint64 total_messages = 1;
    uint64 successful_messages = 2;
    uint64 failed_messages = 3;
    string last_error = 4;
}

message PublishResponse {
    PublishStatus status = 1;
}
